<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F5F5">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/name"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/textbox"
                android:backgroundTint="@color/text_color"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textSize="16sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/amount"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/textbox"
                android:backgroundTint="@color/text_color"
                android:hint="@string/enter_amount"
                android:inputType="number"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/today_date"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/date"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/textbox"
                android:backgroundTint="@color/text_color"
                android:hint="@string/date_fromat"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textSize="16sp" />


            <RadioGroup
                android:id="@+id/isPaid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/radio_btn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/paid" />

                <RadioButton
                    android:id="@+id/radio_btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:checked="false"
                    android:text="@string/not_paid" />
            </RadioGroup>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/textbox"
                android:hint="@string/note"
                android:paddingLeft="10dp"
                android:paddingBottom="40dp"
                android:textSize="14sp" />

            <Button
                android:id="@+id/confirm"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp"
                android:text="@string/confirm"
                android:textAllCaps="false" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>